--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/* 
-  36a5c1
- */
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -38,10 +34,6 @@ img {
   display: block;
   border: none;
   box-shadow: none;
-}
-
-p {
-  font-size: 10px;
 }
 
 input {
@@ -184,6 +176,7 @@ header .h-nav-item {
   text-align: center;
   width: 240px;
   margin: 30px auto;
+  font-size: 12px;
 }
 .carousel-title {
   font-size: 16px;
@@ -200,12 +193,13 @@ header .h-nav-item {
 }
 .carousel-item {
   width: 25%;
-  padding: 4px 8px;
+  min-width: 170px;
   background-color: #fff;
   box-shadow: 0px 0px 2px #aaa;
 }
 .carousel-item .car-img {
-  height: 30%;
+  width: 100%;
+  min-height: 100px;
   margin: 4px auto;
 }
 .car-info {
@@ -214,7 +208,7 @@ header .h-nav-item {
 }
 .maker-name,
 .car-name {
-  font-size: 12px;
+  font-size: 10px;
 }
 
 .favorite-btn-container {
@@ -224,17 +218,16 @@ header .h-nav-item {
   text-align: center;
   display: flex;
   box-shadow: 0px 0px 2px #bbb;
-  padding: 4px 10px;
 }
 .favorite-btn-container p {
-  width: 60px;
   display: block;
   font-size: 10px;
+  transform: scale(0.8);
 }
 .favorite-btn-container span {
-  margin-left: 6px;
-  width: 24px;
-  height: 24px;
+  width: 18px;
+  height: 18px;
+  margin-top: 4px;
   background: url(../assets/img/icon/pinUncheck.png) center / cover;
   cursor: pointer;
 }
@@ -243,18 +236,21 @@ header .h-nav-item {
 }
 
 .show-detail-btn {
-  height: 30px;
-  line-height: 30px;
-  padding: 0 20px;
+  width: 90%;
+  height: 28px;
+  line-height: 28px;
   border: 1px solid #999;
   display: block;
-  margin: 20px auto 0 auto;
+  margin: 16px auto 0 auto;
+  font-size: 10px;
+  text-align: center;
+  position: relative;
 }
 .show-detail-btn img {
-  display: inline-block;
-  height: 18px;
-  vertical-align: middle;
-  margin: -6px 0 0 16px;
+  height: 14px;
+  position: absolute;
+  top: 6px;
+  right: 8px;
 }
 /* ===== /carousel ===== */
 
@@ -287,6 +283,9 @@ header .h-nav-item {
 .car-type-item {
   width: calc(95% / 3);
   margin-bottom: 16px;
+}
+.car-type-item p {
+  font-size: 12px;
 }
 .car-type-item img {
   width: 100%;
@@ -539,8 +538,21 @@ footer {
   font-size: 18px;
 }
 
+/* === レスポンシブ tablet === */
+@media screen and (max-width: 834px) {
+  .carousel-area-f {
+    width: calc(33% * 5);
+  }
+  .carousel-item {
+    width: calc(100% / 3);
+  }
+  .favorite-btn-container p {
+    transform: scale(0.7);
+  }
+}
+
 /* === レスポンシブ sp === */
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 428px) {
   .logo {
     height: 26px;
   }
@@ -580,9 +592,6 @@ footer {
     width: calc(100% / 3);
     padding: 0 4px;
   }
-  .carousel-item .car-img {
-    height: 60px;
-  }
   .maker-name,
   .car-name {
     font-size: 10px;
@@ -592,23 +601,8 @@ footer {
     width: 100px;
     margin: 10px auto;
   }
-  .favorite-btn-container p {
-    font-size: 8px;
-  }
-  .favorite-btn-container span {
-    width: 20px;
-    height: 20px;
-    margin-top: 2px;
-  }
-  .show-detail-btn {
-    font-size: 10px;
-    height: 24px;
-    line-height: 24px;
-    padding: 0 6px 0 10px;
-  }
   .show-detail-btn img {
-    height: 10px;
-    margin: -2px 0 0 6px;
+    right: 4px;
   }
   .company-info {
     padding-right: 20px;
