4th commit Replace comments with English

--- a/css/style.css
+++ b/css/style.css
@@ -551,7 +551,7 @@ footer {
   }
 }
 
-/* === レスポンシブ sp === */
+/* === responsive sp === */
 @media screen and (max-width: 428px) {
   .logo {
     height: 26px;
