--- a/css/style.css
+++ b/css/style.css
@@ -100,25 +100,27 @@ header .h-nav-item {
 .top-slider {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 70vh;
   background-color: #ccc;
   overflow: hidden;
   position: relative;
 }
 .top-slider-area {
-  width: calc(100% * 5);
+  width: calc(100% * 8);
+  height: 100%;
   display: flex;
   position: absolute;
   left: 0;
+  background-color: #111;
 }
 
 .slider-item {
-  width: 100%;
-  height: 300px;
-  background-color: #bbb;
+  width: calc(100% / 8);
+  height: 100%;
   color: #fff;
   text-align: center;
-  line-height: 300px;
+  font-size: 20px;
+  line-height: 70vh;
 }
 
 .indicator-container {
